--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -78,7 +78,6 @@
         app:layout_constraintVertical_bias="0.04">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            style="@style/constrain"
             android:layout_width="wrap_content"
             android:layout_height="match_parent">
 
@@ -99,7 +98,7 @@
         style="@style/txt_usuario_menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Bem Vindo "
+        android:text="Bem Vindo: "
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.126"
