--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -75,12 +75,6 @@
     </style>
 
 
-    <style name="constrain">
-        <item name="layout_constraintStart_toStartOf">parent</item>
-        <item name="layout_constraintBottom_toBottomOf">parent</item>
-        <item name="layout_constraintEnd_toEndOf">parent</item>
-        <item name="layout_constraintTop_toTopOf">parent</item>
-    </style>
 
 
     <style name="rbSexo">
@@ -158,6 +152,11 @@
         <item name="android:textSize">26sp</item>
     </style>
 
+    <style name="card_user">
+        <item name="android:background">@drawable/card_user</item>
+        <item name="android:layout_width">200dp</item>
+        <item name="android:layout_height">200dp</item>
+    </style>
 
 
 
